@startuml

title Gestionale Affitti — Class Diagram iniziale

left to right direction
hide methods
hide stereotypes
skinparam classAttributeIconSize 0

class Persona {
  nome : string
  cognome : string
  luogoNascita : string
  dataNascita : date
  codiceFiscale : string
}

class Indirizzo {
  nazione : string
  provincia : string
  comune : string
  cap : string
  indirizzo : string
  civico : string
  scala : string
  interno : string
}

class DocumentoRiconoscimento {
  tipo : string
  organoEmittente : string
  dataRilascio : date
  dataScadenza : date
  numero : string
}

class Immobile {
  nome : string
}

class DatiCatastali {
  codiceComunale : string
  foglio : int
  particella : int
  subalterno : int
  categoria : string
  consistenza : decimal
  rendita : decimal
}

class Contratto {
  nomeDescrizione : string
  dal : date
  /al : date
  canoneMensile : decimal
  giornoPagamento : int
}

class TipologiaContrattuale {
  denominazione : string
  durata : int
  rinnovo : int
}

class Articolo {
  numArticolo : string
  titolo : string
  sottotitolo : string
  testo : string
}

class ContrattoRegistrato {
  contenuto : string
}

class Pagamento {
  annoCompetenza : int
  meseCompetenza : int
  dataPagamento : date
  importo : decimal
}

Persona "0..*" -- "1" Indirizzo : residenza
Immobile "0..*" -- "1" Indirizzo : ubicazione
Persona "1" -- "0..1" DocumentoRiconoscimento : documento

Immobile "1" -- "1" DatiCatastali : dati catastali
Immobile "1" -- "0..*" Contratto : oggetto della locazione

Persona "1" -- "0..*" Contratto : proprietario
Persona "1" -- "0..*" Contratto : inquilino

TipologiaContrattuale "1" -- "0..*" Contratto : tipologia
TipologiaContrattuale "0..1" -- "1..*" Articolo : articoli predefiniti
Contratto "0..1" -- "1..*" Articolo : articoli registrati

Contratto "1" -- "1" ContrattoRegistrato : copia registrata
Contratto "1" -- "1..*" Pagamento : pagamenti

note right of DocumentoRiconoscimento
  { tipo: carta d'identità | passaporto }
end note

note bottom of DatiCatastali
  { codiceComunale + foglio + particella + subalterno
    identificano univocamente l'Immobile }
end note

note right of Contratto
  { giornoPagamento in 1..28 }
  { /al derivato da dal e tipologia.durata }
end note

note bottom of TipologiaContrattuale
  { durata e rinnovo in anni }
  { 3+2 oppure 4+4 nella v1.0 }
  { rinnovo non gestito operativamente }
end note

note bottom of Articolo
  { ogni Articolo appartiene esattamente a uno tra
    TipologiaContrattuale e Contratto }
  { gli articoli registrati sono copie valorizzate
    distinte dagli articoli predefiniti }
end note

note bottom of ContrattoRegistrato
  { copia storica completa del contratto generato }
  { non cambia se cambiano dati sorgente o articoli predefiniti }
end note

note bottom of Pagamento
  { meseCompetenza in 1..12 }
  { univoco per Contratto + annoCompetenza + meseCompetenza }
  { importo valorizzato dal canoneMensile alla registrazione }
end note

@enduml
